Pull request #1338: fix select colors
Merge in EXTENSIONS/browser-extension to master

Squashed commit of the following:

commit eafd5058498199c056f4a7153162234d615c4a0f
Merge: 24e3426a7 49454ecd5
Author: Anton <a.kaprielov@adguard.com>
Date:   Fri Sep 9 13:30:25 2022 +0300

    merge

commit 24e3426a7f817ad916fcd16e61f6ef5cd04cecf0
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon Sep 5 14:10:23 2022 +0300

    AG-15435 fix select colors

--- a/Extension/src/pages/common/components/ui/Select/select.pcss
+++ b/Extension/src/pages/common/components/ui/Select/select.pcss
@@ -87,8 +87,7 @@
             background-color: var(--gray100);
 
             @media (prefers-color-scheme: dark) {
-                color: var(--black);
-                background-color: var(--gray300);
+                background-color: var(--gray900);
             }
         }
     }
@@ -129,8 +128,7 @@
             color: var(--gray300);
 
             &:hover {
-                background-color: var(--gray300);
-                color: var(--black);
+                background-color: var(--gray900);
             }
         }
     }
